argocd/ingressargocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  #name: argocd-server-ingress
  name: argocd-server
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    #kubernetes.io/tls-acme: "true"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
    #nginx.ingress.kubernetes.io/denylist-source-range: 91.139.248.196/32
    #ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0,::/0
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: argocd.nsserver.eu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
  tls:
  - hosts:
    - argocd.nsserver.eu
    secretName: argocd-secret # do not change, this is provided by Argo CD
